feat(#784): expose managed profile transitions